--- a/theta/theta.cabal
+++ b/theta/theta.cabal
@@ -54,9 +54,9 @@ common shared
                , pureMD5
                , PyF ==0.11.*
                , QuickCheck
-               , streamly ==0.8.1.*
-               , streamly-bytestring ==0.1.4
-               , streamly-process ==0.2.*
+               , streamly ==0.9.*
+               , streamly-bytestring ==0.2.*
+               , streamly-process ==0.3.*
                , template-haskell
                , text
                , tagged
